--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="links">
                 <a href="https://docs.zeek.org/">Zeek docs</a>
                 <a href="https://www.deepl.com/">DeepL translator</a>
-                <a href="https://www.geoteo.net/index">A friend website</a>
+                <a href="https://www.geoteo.net/index">A friend's website</a>
             </div>
         </div>
         
