--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     </script>
 
     <meta name="description" content="Personal web site of Daniele Caliandro" />
-    <meta name="keywords" content="Daniele Caliandro, Danidrd, Web Developer in Italy, Web Developer in Europe, Web Developer in the World" />ù
+    <meta name="keywords" content="Daniele Caliandro, Danidrd, Web Developer in Italy, Web Developer in Europe, Web Developer in the World" />
     <meta name="author" content="Daniele Caliandro" />
     <meta name="robots" content="index, follow" />
 
